[gd_scene load_steps=17 format=3 uid="uid://b31ucniexbg2v"]

[ext_resource type="PackedScene" uid="uid://d36uxisc84scc" path="res://Scenes/Enemy/enemy.tscn" id="1_56ywr"]
[ext_resource type="Script" path="res://Scenes/Enemy/skeleton_mage.gd" id="2_71dh5"]
[ext_resource type="PackedScene" uid="uid://c16qxxd7mhpfp" path="res://Assets/graphics/characters/skeleton mage/Skeleton_Mage.glb" id="2_fbum2"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://Assets/graphics/weapons/wand.gltf" id="3_00sm5"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://Assets/graphics/weapons/barbarian_texture.png" id="4_n438d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ir5gd"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cvyun"]
animation = &"1H_Ranged_Shooting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dms6q"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nfi4i"]
animation = &"Walking_D_Skeletons"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t62vy"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ujix8"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w6wf6"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_57wh3"]
states/idle/node = SubResource("AnimationNodeAnimation_dms6q")
states/idle/position = Vector2(397, 100)
states/walk/node = SubResource("AnimationNodeAnimation_nfi4i")
states/walk/position = Vector2(621, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_t62vy"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_ujix8"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_w6wf6")]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_w8bux"]
fadein_time = 0.3
fadeout_time = 0.3

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_q8nvk"]
graph_offset = Vector2(-135.925, -26.3179)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_cvyun")
nodes/AttackAnimation/position = Vector2(120, 280)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_57wh3")
nodes/MoveStateMachine/position = Vector2(20, 80)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_w8bux")
nodes/OneShot/position = Vector2(400, 60)
nodes/output/position = Vector2(680, 100)
node_connections = [&"OneShot", 0, &"MoveStateMachine", &"OneShot", 1, &"AttackAnimation", &"output", 0, &"OneShot"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mipgm"]
albedo_texture = ExtResource("4_n438d")

[node name="SkeletonMage" instance=ExtResource("1_56ywr")]
script = ExtResource("2_71dh5")
attack_radius = 10.0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ir5gd")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeBlendTree_q8nvk")
anim_player = NodePath("../Skin/AnimationPlayer")
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 2.0
autostart = true

[node name="Skin" parent="." index="3" instance=ExtResource("2_fbum2")]

[node name="Skeleton3D" parent="Skin/Rig" index="0"]
bones/1/position = Vector3(0, 0.391109, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.559599, -0.0606273, -0.64351, 0.518718)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(2.48942e-08, -4.17824e-08, -0.495985, 0.868331)
bones/5/scale = Vector3(1, 0.999999, 1)
bones/6/rotation = Quaternion(1.44633e-08, 1.26672e-08, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.321168, -0.326189, 0.146252, 0.876962)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(7.59701e-05, 7.59709e-05, -0.706828, 0.707386)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/9/rotation = Quaternion(-0.617936, 0.0805073, 0.61764, 0.479786)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(2.97192e-08, 4.74938e-08, 0.519148, 0.854685)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-4.94615e-10, -1.45974e-08, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.319403, 0.301194, -0.227752, 0.869133)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.000213368, 0.000251313, 0.706886, 0.707328)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/14/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/16/rotation = Quaternion(0.993639, 0.0835897, 0.0738424, 0.0155576)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.207642, 6.44892e-08, -1.35948e-07, 0.978205)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.523823, -0.209146, 0.0454719, 0.8245)
bones/18/scale = Vector3(1, 1, 0.999999)
bones/19/rotation = Quaternion(9.10123e-05, 0.920239, -0.391356, -2.05431e-05)
bones/19/scale = Vector3(1, 0.999998, 1)
bones/20/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/20/rotation = Quaternion(0.997113, -0.0296375, 0.0314418, 0.0624444)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.282739, -6.39552e-08, 1.96051e-07, 0.959197)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(-0.563679, 0.114457, -0.00935087, 0.817972)
bones/22/scale = Vector3(1, 1, 0.999999)
bones/23/rotation = Quaternion(-8.93489e-05, 0.920222, -0.391398, 2.0291e-05)
bones/23/scale = Vector3(1, 0.999998, 1)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/27/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/27/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(4.16335e-17, -6.74098e-17, -1.94669e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.520841, 0.787532, -0.0576373)
bones/39/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.510844, 0.787532, 0.0597369)
bones/41/rotation = Quaternion(0.758253, 1.52737e-07, -0.651961, 1.11759e-08)
bones/41/scale = Vector3(1, 1, 1)

[node name="Skeleton_Mage_Hat" parent="Skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.99972, -1.40143e-09, 0.0236466, 1.39341e-09, 1, 3.55686e-10, -0.0236466, -3.22637e-10, 0.99972, 0.000286014, 1.76955, -6.90145e-06)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Skin/Rig/Skeleton3D" index="9"]
transform = Transform3D(0.000115963, -0.150621, -0.988591, -0.999999, -0.000694663, -1.0824e-05, -0.000685709, 0.988591, -0.150622, -0.491055, 0.64064, 0.106645)
bone_name = "handslot.r"
bone_idx = 13

[node name="wand2" parent="Skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("3_00sm5")]

[node name="wand" parent="Skin/Rig/Skeleton3D/BoneAttachment3D/wand2" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_mipgm")

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="Skin"]
[editable path="Skin/Rig/Skeleton3D/BoneAttachment3D/wand2"]
